[project]
name = "example-pkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "RIMZAASAD", email = "162448882+RIMZAASAD@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
example-pkg = "example_pkg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
